# xarm_vr_teleop

./: .gitignore  CMakeLists.txt  README.md  check_robot_status.py  check_tcp_api.py  package.xml  requirements_vr.txt  reset_tcp_pose.py  robot_control.py  run_openvr.sh  visualize_controller.py  visualize_realtime.py  visualize_tcp.py  vr_test.py
scripts/: button_controlled_teleop.py  calibrated_transforms.py  camera_recorder.py  debug_transform.py  frame_transformation.json  manual_vr_bridge.py  realsense_recorder.py  robot_control.py  robot_control_moveit.py  robot_control_pose.py  robot_control_yaw.py  safe_vr_bridge.py  simple_calibration.py  simple_vr_bridge.py  tcp_offset_test.py  test_coordinate_mapping.py  test_tcp_orientation.py  vr_bridge.py  vr_data_collection.py
src/: diagnose_moveit.cpp  robot_control_moveit.cpp  simple_moveit_test.cpp  test_simple_movement.cpp  vr_teleop_correct_mapping.cpp  vr_teleop_direct.cpp  vr_teleop_manual_bridge.cpp  vr_teleop_simple.cpp  vr_teleop_tf.cpp
steamvr_settings_backup/drivers_null_resources_settings/: default.vrsettings  default_UNMODIFIED.vrsettings
steamvr_settings_backup/resources_settings/: default.vrsettings  default_UNMODIFIED.vrsettings
